WEB-5802 Changing the overflow-y argument on the CSS for that element to scroll from auto resolves the issue on Chrome and Safari.  May need more thorough testing, in case CSS doesn't respond the same in all browsers.

--- a/fid-web/src/main/webapp/style/legacy/newCss/component/my_saved_items.css
+++ b/fid-web/src/main/webapp/style/legacy/newCss/component/my_saved_items.css
@@ -5,7 +5,7 @@
     right: 12px;
     background-color:#fff;
     text-align:right;
-    overflow-y:auto;
+    overflow-y: scroll;
     max-height: 500px;
     z-index:1;  /** make sure this is above any FlotCharts that may appear below.   > 0 */
     -webkit-box-shadow: 0px 6px 20px -10px #666666;
